# libradar

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: rust.yml
src/: analysis.rs  apk.rs  callgraph.rs  config.rs  lib.rs  main.rs  mod.rs  pkgtree.rs
src/db/: memdb.rs  mod.rs
src/disass/: getters.rs  insn.in  mod.rs
tests/: dex2call-emu.rs  dex_parse.rs  test-db.rs  test-disass.rs
