[package]
name = "libradar"
version = "0.1.0"
authors = ["Daniel Domínguez <danieldominguez05@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zip = "0.5.6"
rc-zip = "0.0.1"
positioned-io = "0.2.2"
memmap = "0.7.0"
dex = { git = "https://github.com/0xddom/dex-parser" }
seahorse = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
